--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -38,22 +38,16 @@
     
     .header_photo_titre {margin-left: 0px;}
     .header img {margin: 0 auto;}
-    
-    .header_photo_titre {
-        font-size: 5em;
-    }
+    .header_photo_titre {font-size: 5em;}
     
     .header_photo_stitre {
         font-size: 1.2em;
         margin-left: 0;
-    }
+    }    
     
     /* ***** actualités ***** */
-    .flex_contain {
-        display: block;
-    }
-    .flex_actu,
-    .flex_item {width: 100%}
+    .flex_contain {display: block;}
+    .flex_actu, .flex_item {width: 100%}
     .flex_don {margin: 30px 0 30px 0;}
 }
 
@@ -72,8 +66,38 @@
     .footer {height: 210px;}
     .titre_principal {font-size: 2em;}
     
-    
-    
+    /* ***** navigation ***** */
+    nav {
+        display: none;
+        position: absolute;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #6885C8;
+        z-index: 10;
+        padding: 30px;
+    }
+    nav ul li {
+        width: 100%;
+        height: 50px;
+    }
+    ul.navigation li a {
+        border-right: none;
+    }
+    #open,
+    #close {
+        color: #fdf4ed;
+        text-align: center;
+        text-decoration: none;
+        position: absolute;
+        top: 2vh;
+        right: 8vw;
+        font-size: 2em;
+    }
+    #open {
+        display: block
+    }
+    ;
     
     /* ***** page d'accueil ***** */
     .header_photo {display: none;}
@@ -90,6 +114,10 @@
         margin-top: 0px;
         padding: 40px 20px 20px 20px;
     }
+    
+    /* ***** presentation ***** */ 
+    .block-visible-smart {display: block;}
+    .block-hidden-smart {display: none;}
     
     /* ***** pages ***** */
     .presentation_bas {display: block;    }
